<resources>
    <string name="app_name">espresso-ui-test</string>
    <string name="text_main_activity">MainActivity</string>
    <string name="text_next_activity">Next Activity</string>
    <string name="text_secondary_activity">Secondary Activity</string>
    <string name="text_back">Back Activity</string>

    <string name="text_movie_title">Movie Title</string>
    <string name="test_movie_description">This is a description of the movie.</string>
    <string name="text_list_movie_directors">Directors</string>
    <string name="text_list_movie_star_actors">Star Actors</string>
    <string name="text_directors">Directors:</string>
    <string name="text_star_actors">Star Actors:</string>
    <string name="text_select_image_from_gallery">Select an image from gallery</string>
    <string name="text_launch_camera">Launch camera</string>
    <string name="text_launch_dialog">launch dialog</string>
    <string name="text_title_of_dialog">Title of Dialog</string>
    <string name="text_some_information">This dialog is displaying some information.</string>
    <string name="text_ok">Ok</string>
    <string name="text_enter_name">Enter your name</string>
</resources>